docs: prepare for github pages deployment

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -181,7 +181,7 @@
            <header class="header fade-in">
                <h1>🌐 海外流量智能估算器 Pro</h1>
                <p>基于AI算法的智能流量预测，为您提供最精准的数据消耗估算</p>
-               <a href="index.html" class="nav-button">返回智能套餐分析器</a>
+               <a href="../index.html" class="nav-button">返回智能套餐分析器</a>
            </header>
            <div class="quick-start fade-in">
                <h2>🚀 快速开始 - 选择您的使用场景</h2>
