--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
            <div class="header">
                <h1>智能流量套餐分析器 Pro</h1>
                <p>基于AI算法的个性化套餐优化方案</p>
-               <a href="calculator.html" class="nav-button">前往海外流量估算器</a>
+               <a href="calculator/index.html" class="nav-button">前往海外流量估算器</a>
            </div>
    
            <!-- 快速场景选择 -->
