--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
            .header h1 {
                font-size: 3.5rem;
                font-weight: 700;
-               background: linear-gradient(135deg, #fff 0%, rgba(255,255,255,0.8) 100%);
+               background: linear-gradient(45deg, #fff, #fbbf24);
                -webkit-background-clip: text;
                -webkit-text-fill-color: transparent;
                background-clip: text;
