--- a/calculator/index.html
+++ b/calculator/index.html
@@ -4,6 +4,7 @@
        <meta charset="UTF-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <title>海外流量智能估算器 Pro</title>
+       <link rel="icon" href="data:image/svg+xml,&lt;svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22&gt;&lt;text y=%22.9em%22 font-size=%2290%22&gt;🌐&lt;/text&gt;&lt;/svg&gt;">
        <style>
            * {
                margin: 0;
